[package]
name = "http-stat"
version = "0.3.4"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2021"
categories = ["multimedia::images"]
keywords = ["http", "statistics", "httpstat", "http2", "http3"]
description = "httpstat visualizes curl(1) statistics in a way of beauty and clarity."
license = "MIT"
homepage = "https://github.com/vicanso/http-stat-rs"
repository = "https://github.com/vicanso/http-stat-rs"
exclude = ["Cargo.lock"]
readme = "./README.md"
rust-version = "1.82"
autobins = false

[[bin]]
name = "httpstat"
path = "bin/httpstat.rs"


[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
h3-quinn = "0.0.10"
quinn = { version = "0.11.7", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
heck = "0.5.0"
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
nu-ansi-term = "0.50.1"
rustls = "0.23.27"
rustls-native-certs = "0.8.1"
snafu = "0.8.5"
tokio = { version = "1.45.0", features = ["rt", "net", "fs"] }
tokio-rustls = { version = "0.26.2", features = [
    "ring",
], default-features = false }
unicode-truncate = "2.0.0"
x509-parser = "0.17.0"
h3 = "0.0.8"
futures = "0.3.31"
bytesize = "2.0.1"
chrono = "0.4.41"
flate2 = { version = "1.1.1", default-features = false, features = ["zlib"] }
brotli-decompressor = "5.0.0"
zstd = { version = "0.13.3", default-features = false }


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
panic = "abort"
