[package]
name = "http-stat"
version = "0.6.3"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2021"
categories = ["web-programming"]
keywords = ["http", "statistics", "httpstat", "http2", "http3"]
description = "httpstat visualizes curl(1) statistics in a way of beauty and clarity."
license = "MIT"
homepage = "https://github.com/vicanso/http-stat-rs"
repository = "https://github.com/vicanso/http-stat-rs"
exclude = ["Cargo.lock"]
readme = "./README.md"
rust-version = "1.88"
autobins = false

[[bin]]
name = "httpstat"
path = "bin/httpstat.rs"


[features]
default = ["doh"]
# DNS-over-HTTPS and DNS-over-TLS preset support
# (`--dns-servers=cloudflare-doh`, `--dns-servers=cloudflare-dot`, etc.).
# Default-on so the `httpstat` binary ships with full DoH/DoT support;
# library consumers can drop it via `default-features = false`.
doh = ["hickory-resolver/https-ring", "hickory-resolver/tls-ring"]

[dependencies]
brotli-decompressor = "5.0.1"
bytes = "1.11.1"
bytesize = "2.3.1"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = { version = "1.1.9", default-features = false, features = ["zlib"] }
futures = "0.3.32"
h3 = "0.0.8"
h3-quinn = "0.0.10"
heck = "0.5.0"
hickory-resolver = { version = "0.26.1", default-features = false, features = [
    "system-config",
    "tokio",
    "webpki-roots",
] }
http = "1.4.2"
http-body = "1.0.1"
http-body-util = "0.1.3"
humantime = "2.3.0"
hyper = { version = "1.10.1", features = ["client", "http1", "http2"] }
libc = "0.2"
hyper-util = { version = "0.1.20", features = ["tokio"] }
nu-ansi-term = "0.50.3"
quinn = { version = "0.11.9", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
rustls = { version = "0.23.36", default-features = false, features = ["std", "ring", "tls12"] }
rustls-native-certs = "0.8.4"
rustls-pki-types = "1.14.1"
serde_json = "1.0.150"
snafu = "0.9.1"
tempfile = "3.27.0"
time = { version = "0.3.49", default-features = false, features = [
    "std",
    "formatting",
    "local-offset",
] }
tokio = { version = "1.52.3", features = ["rt", "net", "fs"] }
tokio-rustls = { version = "0.26.4", features = [
    "ring",
], default-features = false }
tonic = { version = "0.14.6", features = [
    "transport",
], default-features = false }
tonic-health = "0.14.6"
tower-service = "0.3.3"
unicode-truncate = "2.0.1"
x509-parser = "0.18.1"
zstd = { version = "0.13.3", default-features = false }

# mimalloc is only wired in as the global allocator on musl targets
# (see the `#[cfg(target_env = "musl")]` global_allocator in bin/httpstat.rs).
# Keep it out of glibc/macOS builds so it isn't compiled or linked there.
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.52"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
panic = "abort"
debug = false
overflow-checks = false
incremental = false

[profile.release.package.brotli-decompressor]
opt-level = 3

[profile.release.package.zstd]
opt-level = 3

[profile.release.package.rustls]
opt-level = 3

[profile.release.package.httparse]
opt-level = 3
